# synth-xfer

./: .gitignore  CONSTANT_RANGE_PLAYBOOK.md  KNOWN_BITS_PLAYBOOK.md  MANUAL_MLIR_OPT_PLAYBOOK.md  README.md  SYNTHESIS_TODO.md  SYNTH_STATUS.md  TRANSFER_PLAYBOOK.md  pyproject.toml
cpp/: anti_range.hpp  bindings.cpp  domain.hpp  enum.hpp  eval.hpp  knownbits.hpp  mod.hpp  pdep.hpp  sconst_range.hpp  uconst_range.hpp
john-junk/: ctpop.ll
llvm_tools/: check_instruction_consistency.py  log_known_bits.py  summarize_known_bits_logs.py
mlir/Mod11/: get_constraint.mlir
mlir/Mod13/: get_constraint.mlir
mlir/Mod3/: get_constraint.mlir
mlir/Mod5/: get_constraint.mlir
mlir/Mod7/: get_constraint.mlir
mlir/Operations/: 13_67254.mlir  14_63673.mlir  18_61336.mlir  1_348667.mlir  2_215733.mlir  3_186886.mlir  45_32922.mlir  4_177254.mlir  5_158932.mlir  62_24270.mlir  Fshl.mlir  Fshr.mlir  Nop.mlir  Rotl.mlir  Rotr.mlir  ShlNswNuw.mlir  Square.mlir
synth_xfer/: jit.py  lower_to_llvm.py
synth_xfer/_util/: cond_func.py  eval.py  jit.py  log.py  lower.py  one_iter.py  parse_mlir.py  point_eval.py  solution_set.py  verifier.py
synth_xfer/cli/: args.py  benchmark.py  eval_final.py  eval_point.py  lower_to_llvm.py  main.py  run_xfer.py  simplifier.py  sxf.py  verify.py  verify_upto.py
synth_xfer/egraph_rewriter/: datatypes.py  expr_builder.py  rewriter.py
tests/: test_files.py  test_jit.py  test_lattice.py  test_lowering.py  test_parse.py  test_verif.py
tests/data/: concrete_add_4.ll  concrete_and_4.ll  concrete_and_4_shim.ll  cr_add.mlir  cr_add_4.ll  cr_add_4_shim.ll  cr_add_64.ll  cr_add_64_shim.ll  cr_add_helpers_4.ll  kb_13_67254.mlir  kb_14_63673.mlir  kb_18_61336.mlir  kb_1_348667.mlir  kb_2_215733.mlir  kb_3_186886.mlir  kb_45_32922.mlir  kb_4_177254.mlir  kb_5_158932.mlir  kb_62_24270.mlir  kb_Abdu.mlir  kb_Add.mlir  kb_AddNsw.mlir  kb_AddNswNuw.mlir  kb_AddNuw.mlir  kb_Ashr.mlir  kb_CountLOne.mlir  kb_Fshl.mlir  kb_Lshr.mlir  kb_LshrExact.mlir  kb_Mods.mlir  kb_Mul.mlir  kb_MulNsw.mlir  kb_MulNswNuw.mlir  kb_MulNuw.mlir  kb_Or.mlir  kb_Rotl.mlir  kb_SaddSat.mlir  kb_Sdiv.mlir  kb_SdivExact.mlir  kb_Shl.mlir  (+102 more)
tools/: memlimit.py
