[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=3.0", "setuptools_scm[toml]>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "synth-xfer"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "xdsl>=0.48.3",
  # "xdsl-smt @ https://github.com/opencompl/xdsl-smt/archive/4704d93.tar.gz",
  "xdsl-smt @ https://github.com/dominicmkennedy/xdsl-smt/archive/739aa03.tar.gz",
  "z3-solver==4.15.1.0",
  "llvmlite>=0.45.0",
]

[project.optional-dependencies]
dev = [
  "pybind11>=3.0",
  "pytest>=8.0",
]

[project.scripts]
sxf = "synth_xfer.cli.sxf:main"
benchmark = "synth_xfer.cli.benchmark:main"
verify = "synth_xfer.cli.verify:main"
lower-to-llvm = "synth_xfer.cli.lower_to_llvm:main"

[tool.scikit-build]
minimum-version = "0.9"
build-dir = "build/"
wheel.expand-macos-universal-tags = true
wheel.packages = ["synth_xfer"]
cmake.define = { CMAKE_EXPORT_COMPILE_COMMANDS = true }

[tool.ruff]
line-length = 90
target-version = "py313"
lint.extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["synth_xfer"]
combine-as-imports = true
force-sort-within-sections = true
