[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=3.0",
  "setuptools_scm[toml]>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "synth-xfer"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "xdsl>=0.48.3",
  "xdsl-smt @ https://github.com/dominicmkennedy/xdsl-smt/archive/739aa03.tar.gz",
  "z3-solver==4.15.1.0",
  "llvmlite==0.44.0",
  "pandas==2.3.3",
  "egglog>=1.0.0",
  "cloudpickle",
]

[project.optional-dependencies]
dev = [
  "pytest>=9",
  "ruff>=0.15",
  "pyright>=1.1",
  "pre-commit>=4.5",
]

[project.scripts]
sxf = "synth_xfer.cli.sxf:main"
benchmark = "synth_xfer.cli.benchmark:main"
eval-final = "synth_xfer.cli.eval_final:main"
eval-point = "synth_xfer.cli.eval_point:main"
verify = "synth_xfer.cli.verify:main"
lower-to-llvm = "synth_xfer.cli.lower_to_llvm:main"
simplifier = "synth_xfer.cli.simplifier:main"

[tool.scikit-build]
minimum-version = "0.9"
build-dir = "build/"
wheel.expand-macos-universal-tags = true
wheel.packages = ["synth_xfer"]
cmake.define = { CMAKE_EXPORT_COMPILE_COMMANDS = true }
cmake.args = ["-DCMAKE_C_COMPILER=clang", "-DCMAKE_CXX_COMPILER=clang++"]

[tool.ruff]
line-length = 90
target-version = "py313"
lint.extend-select = ["I"]
lint.ignore = ["E731"]

[tool.ruff.lint.isort]
known-first-party = ["synth_xfer"]
combine-as-imports = true
force-sort-within-sections = true

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["synth_xfer", "tests"]
reportMissingImports = "error"
reportUnnecessaryTypeIgnoreComment = "warning"
